# T27-veris-hack

./: .env copy.example  .env.example  .gitignore  API_KEYS_GUIDE.md  COMPETITION_SETUP.md  README.md  gauntlet-hackathon-plan.md  plan.md  pyproject.toml
.github/: pull_request_template.md
data/: exploit-citations.json  veris-scenarios.json
docs/: sse-contract.md
docs/prompts/: target-camel.md  target-vulnerable.md
roles/: be1-orchestrator.md  be2-voice.md  fe-dashboard.md  pm-demo.md
scripts/: generate_demo_data.py
services/orchestrator/: attacker.py  citation_fetcher.py  evaluator.py  events.py  main.py  reporter.py  requirements.txt  veris_generator.py
services/voice/: README.md  api.py  compat.py  llm.py  models.py  prompts.py  render_fallbacks.py  service.py  settings.py  transport.py  tts.py
tests/: test_handlers.py  test_target_service.py  test_voice_api.py
voicerun/: README.md
voicerun/attacker-agent/: README.md  handler.py  requirements.txt
voicerun/target-agent/: .vrignore  README.md  handler.py
web/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ApplyCaMeLButton.tsx  AttackFeed.tsx  AttackGlyph.tsx  AttackPicker.tsx  AudioWaveform.tsx  CamelDiagram.tsx  GauntletDashboard.test.tsx  GauntletDashboard.tsx  GauntletMark.tsx  LaunchSequence.tsx  RiskReport.tsx  SpeakButton.tsx  SponsorFooter.tsx  Transcript.test.tsx  Transcript.tsx
web/hooks/: useSSE.ts
web/lib/: citation-types.ts  citations.ts  demo-data.ts  events.test.ts  events.ts  useReducedMotion.ts
(+7 files in other folders)
