[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauntlet-voice"
version = "0.1.0"
description = "BE2 voice service for the GAUNTLET hackathon demo"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<0.29",
  "openai>=1.79,<2",
  "pydantic>=2.8,<3",
  "uvicorn>=0.34,<0.35",
  "websockets>=14,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[tool.setuptools.packages.find]
include = ["services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
